--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 body{
     background-image:  url(./imagens/bg.jpg);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: 100%;
 }
 .mosquito1 {
     width: 50px;
